--- a/default.hbs
+++ b/default.hbs
@@ -75,12 +75,18 @@
 					</span>
 				{{/if}}
 				{{navigation}}
+				<a class="nav-social" aria-label="GitHub" href="https://github.com/amirzak" title="GitHub"><i class="icon icon-github" aria-hidden="true">{{> "icons/icon-github"}}</i></a>
+				<a class="nav-social" aria-label="X (Twitter)" href="https://x.com/amirzak6" title="X (Twitter)"><i class="icon icon-twitter" aria-hidden="true">{{> "icons/icon-twitter"}}</i></a>
+				<a class="nav-social" aria-label="LinkedIn" href="https://www.linkedin.com/in/amirzak" title="LinkedIn"><i class="icon icon-linkedin" aria-hidden="true">{{> "icons/icon-linkedin"}}</i></a>
 				<a class="nav-search" title="{{t "Search"}}" aria-label="{{t "Search"}}" data-ghost-search><i class="icon icon-search" aria-hidden="true">{{> "icons/icon-search"}}</i></a>
 			</nav>
 
 			<div class="nav-wrapper-control">
 				<div class="inner">
 					<a class="nav-menu" role="button"><i class="icon icon-menu" aria-hidden="true">{{> "icons/icon-menu"}}</i> {{t "Menu"}}</a>
+					<a class="nav-social" aria-label="GitHub" href="https://github.com/amirzak" title="GitHub"><i class="icon icon-github" aria-hidden="true">{{> "icons/icon-github"}}</i></a>
+					<a class="nav-social" aria-label="X (Twitter)" href="https://x.com/amirzak6" title="X (Twitter)"><i class="icon icon-twitter" aria-hidden="true">{{> "icons/icon-twitter"}}</i></a>
+					<a class="nav-social" aria-label="LinkedIn" href="https://www.linkedin.com/in/amirzak" title="LinkedIn"><i class="icon icon-linkedin" aria-hidden="true">{{> "icons/icon-linkedin"}}</i></a>
 					<a class="nav-search" title="{{t "Search"}}" aria-label="{{t "Search"}}" role="button" data-ghost-search><i class="icon icon-search" aria-hidden="true">{{> "icons/icon-search"}}</i></a>
 				</div>
 			</div>
@@ -103,7 +109,7 @@
 					{{#if @site.secondary_navigation}}
 					{{navigation type="secondary"}}
 					{{/if}}
-					<span class="nav-credits">{{t "Published with"}} <a href="https://ghost.org">Ghost</a> &bull; {{t "Theme" }} <a href="https://github.com/zutrinken/attila">Attila</a> &bull; <a class="menu-item js-theme" href="#" data-system="System theme" data-dark="Dark theme" data-light="Light theme"><span class="theme-icon"></span><span class="theme-text">System theme</span> </a> </span>
+					<span class="nav-credits"><a class="menu-item js-theme" href="#" data-system="System theme" data-dark="Dark theme" data-light="Light theme"><span class="theme-icon"></span><span class="theme-text">System theme</span> </a> </span>
 				</nav>
 			</div>
 
